# gtk-systray

./: .gitignore  Makefile.am  configure.ac  main.c  systray-box.c  systray-box.h  systray-manager.c  systray-manager.h  systray-marshal.c  systray-marshal.h  systray-socket.c  systray-socket.h  systray.c  systray.h
src/: Makefile.am
src/example/: Makefile.am  main.c
src/libgtk-systray/: Makefile.am  gtk-systray.pc.in  systray-manager.c  systray-marshal.c  systray-socket.c  systray-socket.h
